--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "module": "es2020",
     "lib": ["es2018", "dom"],
     "useDefineForClassFields": false,
-    "types": ["protractor"]
+    "types": ["jasmine", "protractor"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
